--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tauri-apps/api": "^1",
     "antd": "4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
