--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ant-design/icons": "^5.3.3",
     "@reduxjs/toolkit": "^2.2.1",
     "@tauri-apps/api": "^1",
-    "antd": "4",
+    "antd": "^5.15.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
