--- a/.github/workflows/tauri-action.yml
+++ b/.github/workflows/tauri-action.yml
@@ -3,7 +3,7 @@ name: 'publish'
 on:
   push:
     branches:
-      - release
+      - feature/v1.0
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
