--- a/.github/workflows/tauri-action.yml
+++ b/.github/workflows/tauri-action.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-latest, windows-latest]
+        platform: [windows-latest]
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -24,6 +24,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
+
+      - name: install pnpm
+        run: npm install -g pnpm
 
       - name: install Rust stable
         uses: actions-rs/toolchain@v1
